<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@android:color/white" />

   <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#03A9F4"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anApplicationForTrackingAnthropometricParametersAndDownloadingTheMenu"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#000"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:paddingTop="20dp"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingBottom="40dp" >

    <TextView
        android:textSize="16dp"
        android:id="@+id/tvActivationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activationCode"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="#03A9F4"/>

    <EditText
        android:id="@+id/etActivationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnActivation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter"
        android:textColor="#ffff"
        android:background="@drawable/shape2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:text="@string/askYourActivationCodeAtYourNutritionist"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="#000"/>

</LinearLayout>

</LinearLayout>